--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
     "expo": "~50.0.5",
+    "expo-navigation-bar": "~2.8.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-vector-icons": "^10.0.3",
-    "expo-navigation-bar": "~2.8.1"
+    "react-native-uuid": "^2.0.1",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
